msg/async/AsyncConnection: Fix FPE in process_connection

Check ms_inject_socket_failures is valid before we use it.

Fixes: http://tracker.ceph.com/issues/23618

Signed-off-by: Brad Hubbard <bhubbard@redhat.com>